[gd_scene load_steps=9 format=3 uid="uid://urvucgyy7lmi"]

[ext_resource type="Script" path="res://scenes/recovery_game.gd" id="1_nfk8w"]
[ext_resource type="Texture2D" uid="uid://doiqmgy3d7agt" path="res://arts/icons/Internets.png" id="2_ypos1"]
[ext_resource type="Texture2D" uid="uid://l4x62gxv0oar" path="res://arts/icons/Email.png" id="3_1173i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsrjy"]
size = Vector2(27.49, 641)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp8xy"]
size = Vector2(785.25, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_qgc7o"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v47kw"]
size = Vector2(126, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_8s6bt"]
radius = 14.0357

[node name="RecoveryGame" type="Node2D"]
script = ExtResource("1_nfk8w")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 8.0
offset_right = 488.0
offset_bottom = 496.0

[node name="Label" type="Label" parent="."]
offset_left = 107.0
offset_top = 30.0
offset_right = 284.0
offset_bottom = 50.0
scale = Vector2(1.53335, 1.53335)
text = "Recover your email!"

[node name="Label2" type="Label" parent="."]
offset_left = 201.0
offset_top = 452.0
offset_right = 378.0
offset_bottom = 472.0
scale = Vector2(1.27637, 1.27637)
theme_override_colors/font_color = Color(0.215686, 0.721569, 0, 1)
text = "RECOVER"

[node name="Label3" type="Label" parent="."]
offset_left = 341.0
offset_top = 452.0
offset_right = 518.0
offset_bottom = 472.0
scale = Vector2(1.27637, 1.27637)
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "ARCHIVE"

[node name="Label4" type="Label" parent="."]
offset_left = 63.0
offset_top = 452.0
offset_right = 240.0
offset_bottom = 472.0
scale = Vector2(1.27637, 1.27637)
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "ARCHIVE"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-3.5, 310.5)
shape = SubResource("RectangleShape2D_fsrjy")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(508.49, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-10.745, 310.5)
shape = SubResource("RectangleShape2D_fsrjy")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(131.375, -1.625)
shape = SubResource("RectangleShape2D_jp8xy")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(0, 510.57)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(131.375, -9.5)
shape = SubResource("RectangleShape2D_jp8xy")

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(184, 465)
rotation = 0.523598
scale = Vector2(1.0776, 1.0776)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D5"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-13.8687, 39.082, 1, -57, 15, 24)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D5"]
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2(305, 465)
rotation = -0.523598
scale = Vector2(1.0776, 1.0776)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D6"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-12, 25, 1, -57, 17.6717, 38.063)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D6"]
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2(472, 461)
rotation = 0.156241
scale = Vector2(1.76203, 1.41782)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D7"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D7"]
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="StaticBody2D8" type="StaticBody2D" parent="."]
position = Vector2(16, 456)
rotation = -0.261799
scale = Vector2(1.77086, 1.85189)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D8"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D8"]
polygon = PackedVector2Array(-12, 25, 1, -57, 15, 24)

[node name="Bumpper" type="StaticBody2D" parent="."]
position = Vector2(61, 174)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper2" type="StaticBody2D" parent="."]
position = Vector2(199, 174)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper2"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper2"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper3" type="StaticBody2D" parent="."]
position = Vector2(332, 174)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper3"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper3"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper4" type="StaticBody2D" parent="."]
position = Vector2(61, 323)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper4"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper4"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper5" type="StaticBody2D" parent="."]
position = Vector2(199, 323)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper5"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper5"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper6" type="StaticBody2D" parent="."]
position = Vector2(332, 323)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper6"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper6"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper7" type="StaticBody2D" parent="."]
position = Vector2(131, 245)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper7"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper7"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper8" type="StaticBody2D" parent="."]
position = Vector2(269, 245)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper8"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper8"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper9" type="StaticBody2D" parent="."]
position = Vector2(128, 172)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper9"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper9"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper10" type="StaticBody2D" parent="."]
position = Vector2(266, 172)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper10"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper10"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper11" type="StaticBody2D" parent="."]
position = Vector2(399, 172)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper11"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper11"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper12" type="StaticBody2D" parent="."]
position = Vector2(128, 321)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper12"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper12"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper13" type="StaticBody2D" parent="."]
position = Vector2(266, 321)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper13"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper13"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper14" type="StaticBody2D" parent="."]
position = Vector2(399, 321)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper14"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper14"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper15" type="StaticBody2D" parent="."]
position = Vector2(198, 243)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper15"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper15"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper16" type="StaticBody2D" parent="."]
position = Vector2(336, 243)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper16"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper16"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper17" type="StaticBody2D" parent="."]
position = Vector2(97, 209)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper17"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper17"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper18" type="StaticBody2D" parent="."]
position = Vector2(235, 209)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper18"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper18"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper19" type="StaticBody2D" parent="."]
position = Vector2(368, 209)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper19"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper19"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper20" type="StaticBody2D" parent="."]
position = Vector2(97, 358)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper20"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper20"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper21" type="StaticBody2D" parent="."]
position = Vector2(235, 358)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper21"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper21"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper22" type="StaticBody2D" parent="."]
position = Vector2(368, 358)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper22"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper22"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper23" type="StaticBody2D" parent="."]
position = Vector2(167, 280)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper23"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper23"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper24" type="StaticBody2D" parent="."]
position = Vector2(305, 280)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper24"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper24"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper25" type="StaticBody2D" parent="."]
position = Vector2(164, 207)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper25"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper25"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper26" type="StaticBody2D" parent="."]
position = Vector2(302, 207)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper26"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper26"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper27" type="StaticBody2D" parent="."]
position = Vector2(435, 207)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper27"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper27"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper28" type="StaticBody2D" parent="."]
position = Vector2(164, 356)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper28"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper28"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper29" type="StaticBody2D" parent="."]
position = Vector2(302, 356)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper29"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper29"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper30" type="StaticBody2D" parent="."]
position = Vector2(435, 356)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper30"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper30"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper31" type="StaticBody2D" parent="."]
position = Vector2(234, 278)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper31"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper31"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Bumpper32" type="StaticBody2D" parent="."]
position = Vector2(372, 278)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpper32"]
shape = SubResource("CircleShape2D_qgc7o")

[node name="Crosshair068" type="Sprite2D" parent="Bumpper32"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(0.212, 0.212)
texture = ExtResource("2_ypos1")

[node name="Win" type="Area2D" parent="."]
position = Vector2(245, 474)
scale = Vector2(0.63835, 0.951219)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
shape = SubResource("RectangleShape2D_v47kw")

[node name="Dead" type="Area2D" parent="."]
position = Vector2(385, 474)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dead"]
shape = SubResource("RectangleShape2D_v47kw")

[node name="Dead2" type="Area2D" parent="."]
position = Vector2(110, 474)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dead2"]
shape = SubResource("RectangleShape2D_v47kw")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(8, 16, 480, 16, 480, 488, 8, 488, 8, 32, -16, 32, -16, 512, 512, 512, 512, -8, -16, -8, -16, 72, 8, 72)

[node name="CursorBody" type="RigidBody2D" parent="."]
position = Vector2(199, 115)
collision_layer = 2
collision_mask = 3
freeze = true
freeze_mode = 1
continuous_cd = 2

[node name="Email" type="Sprite2D" parent="CursorBody"]
position = Vector2(-1.78814e-07, 3)
scale = Vector2(0.140625, 0.140625)
texture = ExtResource("3_1173i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CursorBody"]
position = Vector2(-7.62939e-06, 2.86102e-06)
rotation = 1.5708
shape = SubResource("CircleShape2D_8s6bt")

[node name="Button" type="Button" parent="CursorBody"]
visible = false
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.387401, 0.641483)
focus_mode = 0
disabled = true
text = "EMAIL"

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(476, 175)

[connection signal="body_entered" from="Win" to="." method="_on_win_body_entered"]
[connection signal="body_entered" from="Dead" to="." method="_on_dead_body_entered"]
[connection signal="body_entered" from="Dead2" to="." method="_on_dead_body_entered"]
[connection signal="pressed" from="CursorBody/Button" to="." method="_on_button_pressed"]
